# real-time-message-app-actix-nextjs

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/sse/: page.tsx
frontend/src/app/websocket/: page.tsx
frontend/src/components/: Navigation.tsx
