[package]
name = "sse_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
mongodb = "3.3.0"                                       # <- no features needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.10.1"
actix-cors = "0.7.1"
tokio = "1.47.1"
actix-web-actors = "4.3.1"
rand = "0.9.2"
actix = "0.13.5"
uuid = "1.18.1"
